--- a/productsService/pom.xml
+++ b/productsService/pom.xml
@@ -12,7 +12,9 @@
 	<artifactId>productsService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>productsService</name>
-	<description>Demo project </description>
+	<description>Demo project</description>
+	<packaging>jar</packaging>
+
 	<url/>
 	<licenses>
 		<license/>
@@ -27,9 +29,28 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>8</java.version>
 	</properties>
+
+	<!-- Added for AWS Java SDK -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>bom</artifactId>
+				<version>2.31.13</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sqs</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -45,8 +66,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>8</source> <!-- Adjust to match project Java version -->
+					<target>8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
