--- a/productsManagement/pom.xml
+++ b/productsManagement/pom.xml
@@ -30,20 +30,8 @@
 		<java.version>8</java.version>
 	</properties>
 
-	<!-- Added for AWS Java SDK -->
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>com.amazonaws</groupId>
-				<artifactId>aws-java-sdk-bom</artifactId>
-				<version>1.11.106</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -57,7 +45,16 @@
 
 		<dependency>
 			<groupId>com.amazonaws</groupId>
+			<artifactId>amazon-sqs-java-temporary-queues-client</artifactId>
+			<version>1.2.4</version>
+			<type>jar</type>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-sqs</artifactId>
+			<version>1.12.774</version>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 
