--- a/productsService/pom.xml
+++ b/productsService/pom.xml
@@ -82,6 +82,13 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.5.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.mcastillo</groupId>
+			<artifactId>commonLibrary</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
