--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,13 @@
         <java.version>8</java.version>
     </properties>
 
-
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
